# ft_irc

./: .gitignore  CMakeLists.txt  Makefile  Protocole.txt  README.md  Server.cpp  Server.hpp  User.cpp  User.hpp  main.cpp
.github/workflows/: make.yml
Commandes/: commands.hpp
Commandes/Channel/: INVITE.cpp  JOIN.cpp  KICK.cpp  LIST.cpp  MODE.cpp  NAMES.cpp  PART.cpp  TOPIC.cpp
Commandes/Other/: ERROR.cpp  PING.cpp  PONG.cpp
Commandes/Requests/: WHO.cpp
Commandes/Server/: VERSION.cpp
Commandes/Users/: MODE.cpp  NICK.cpp  OPER.cpp  PASS.cpp  QUIT.cpp  USER.cpp
srcs/: Channels.cpp  SockAddress.cpp  SockServer.cpp  User.cpp  _SockServer_Commands.cpp  main.cpp  socketConf.cpp  utils.cpp
srcs/Commandes/Channel/: INVITE.cpp  JOIN.cpp  KICK.cpp  LIST.cpp  MODE.cpp  NAMES.cpp  PART.cpp  TOPIC.cpp
srcs/Commandes/Messages/: PRIVMSG.cpp
srcs/Commandes/Other/: ERROR.cpp  KILL.cpp  PING.cpp  PONG.cpp
srcs/Commandes/Requests/: WHO.cpp
srcs/Commandes/Server/: INFO.cpp  TIME.cpp  VERSION.cpp
srcs/Commandes/Users/: MODE.cpp  NICK.cpp  OPER.cpp  PASS.cpp  QUIT.cpp  USER.cpp
srcs/includes/: Channels.hpp  SockAddress.hpp  SockServer.hpp  User.hpp  _SockServer_Errors.hpp  errors.hpp  ft_irc.hpp  responses.hpp
